--- a/yizu/Info.plist
+++ b/yizu/Info.plist
@@ -60,11 +60,20 @@
 				<string>zhifubao2017102009402694</string>
 			</array>
 		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>wbyy</string>
+			</array>
+		</dict>
 	</array>
 	<key>CFBundleVersion</key>
 	<string>1</string>
 	<key>LSApplicationQueriesSchemes</key>
 	<array>
+		<string>wbyy</string>
 		<string>wechat</string>
 		<string>weixin</string>
 		<string>mqqapi</string>
