--- a/yizu/Info.plist
+++ b/yizu/Info.plist
@@ -70,7 +70,7 @@
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>1</string>
+	<string>2</string>
 	<key>LSApplicationQueriesSchemes</key>
 	<array>
 		<string>wbyy</string>
@@ -128,7 +128,7 @@
 	<key>NSCameraUsageDescription</key>
 	<string>是否允许此App使用你的相机？</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>导航</string>
+	<string> 我们需要通过您的地理位置信息获取您周边的相关数据 </string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>是否允许此App访问你的媒体资料库？</string>
 	<key>UILaunchStoryboardName</key>
